# HangulPatcher

./: .gitignore  Cargo.toml  HangulPatcher.sln  LICENSE  LatestVersion  README.md  app.html  build.sh  package.json  tauri.conf.json  tsconfig.json
WindowsFormsApp1/: App.config  FontLibrary.cs  Form1.Designer.cs  Form1.cs  Form1.resx  HangulCraft.csproj  Program.cs  UpdateAlert.Designer.cs  UpdateAlert.cs  UpdateAlert.resx  Updater.cs
WindowsFormsApp1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
frontend/: index.html
frontend/assets/: Main.css  Main.js
locales/: ko-KR.wxl
src/: api.rs  buf.rs  buffer.rs  char_type.rs  history_type.rs  keys.rs  korean.rs  lib.rs  main.rs  patcher.rs  send_key.rs  settings.rs  win32.rs  win_overlay.rs
src/GUI/: Electron.ts  Main.ts  global.d.ts
