[package]
name = "hangul-patcher"
version = "0.1.0"
description = "Hangul Patcher"
authors = ["ilyMuno"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]

[dependencies]
sejong = "0.1.5"
winapi = { version = "0.3.9", features = ["winuser"] }
lazy_static = "1.4.0"
user32-sys = "0.2.0"